--- a/_posts/2017-02-07-SAT-Blog.md
+++ b/_posts/2017-02-07-SAT-Blog.md
@@ -6,5 +6,5 @@ This is a place holder.
 
 ### Now, cat_burrito:
 
-![Cat_Burrito]('../images/cat_burrito.jpg')
+![Cat_Burrito](../images/cat_burrito.jpg)
 
