--- a/_posts/2017-02-17-project3.md
+++ b/_posts/2017-02-17-project3.md
@@ -6,6 +6,8 @@ I started by narriowing down the 82 fields to 19 among them included sale price,
 
 In the first chart, you can see that North West Ames and College of Cedar Rapids have two of the highest number of houses purchased of anywhere in Iowa. So, does that mean that the prices are low which is why people are flocking to these locations?
 
+![Image Name](../images/Neighborhoods_Avg_Price.jpg)
+
 Not exactly. My next chart shows that both of the aforementioned places are not amongst the cheapest places to live and are rather closer toward the median of what people pay for a home. So why are people flocking to these locations?
 
 Ultimately it's hard to say. I would have really liked to have seen a few more categories of data listed in this dataset to better answer this question. For instance, I would have loved to know how old these home owners are. If we knew, we may be able to see if there is a certain demographic of people moving into the area and that is reason why those two areas are so attractive. Additionally, I would have like to have known each town's proximity to certain venues. If it's a quieter area with not a lot going on, maybe it is home to people who are older or with less to do around that area. The final piece of info that would have been helpful is number of bedrooms. I wish this had been included because it tells us more information about the buyers than we have. Someone who buys a small place is not likely to be having kids anytime soon or has had kids and is downsizing where as a bigger house would indicate either it's a family with kids moving in or a family who wants to have kids in the near future./Users/bobbypoole/DSI-NYC-4/BobbyPoole.github.io/_posts 
