--- a/_posts/2017-02-08-project2.md
+++ b/_posts/2017-02-08-project2.md
@@ -8,6 +8,6 @@ When I parsed through the data, I wanted to find out two things. One, how long d
 ![Image Name](../images/Days_to_peak.project2.jpg)
 
 On the first chart, we see how the songs took until the peaked. It comes across as a normal distribution with the one bucket just past the 50 day mark where it drops off. It still performs consistently with most songs being on the charts for 28-84 days. After 100 days, few songs will continue to remain on the chart. As you get further out, it gets even smaller.
-![Image Name](../images/Song_Lenght.project2.jpg)
+![Image Name](../images/Song_Length.project2.jpg)
 
 On our next chart we see that average song length falls right at the four minute mark. iIn fact, most of the songs are normally distributed over the 3-5 minute period.  There are a handful that go beyond the six minute interval but overall it is pretty well contained.
